--- a/individual_project.ipynb
+++ b/individual_project.ipynb
@@ -426,7 +426,7 @@
    "metadata": {},
    "source": [
     "**Data Description\n",
-    "    players.csv dataset**\n",
+    "    players.csv Dataset**\n",
     "\n",
     "- There are 196 observations\n",
     "- 7 variables (experience, subscribe, hashedEmail, played_hours, name, gender, age)\n",
@@ -462,6 +462,29 @@
     "| name           | character | Name of user                                 |\n",
     "| gender         | factor    | Gender of user                               |\n",
     "| age            | integer   | Age of user (years)                          |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f84d3473-f413-4b3a-a52d-b141d644703c",
+   "metadata": {},
+   "source": [
+    "**Broad Question**\n",
+    "- What player characteristics and behaviours are most predictive of subscribing to a game related newsletter, and how do these features differ between various player types?\n",
+    "\n",
+    "**Specific Question**\n",
+    "- Can player experience, hours played, and age predict whether a MineCraft player subscribes to the game's newsletter?\n",
+    "\n",
+    "**How the Dataset Will Help Answer This Question**\n",
+    "- The dataset shows whether each individual is subscribed to the newsletter\n",
+    "- Players experience reflects on a player's engagement with the game, and can be analyzed in relation to subscription to a newsletter. By plotting points on a graph, we can see if there is a trend.\n",
+    "- Players hours played reflects on how often a player engages with the game, and can be analyzed the same way as players experience is, with a graph\n",
+    "- Players age may reflect how interested different age groups are in the game, and can be analyzed the same way.\n",
+    "\n",
+    "**How to wrangle the dataset**\n",
+    "- Select variables specific to the question being answered\n",
+    "- Tidy the dataset by naming variables in similar matter (all lowercase)\n",
+    "- Split the data into a training and testing dataset  "
    ]
   },
   {
