Added methods and plan

--- a/individual_project.ipynb
+++ b/individual_project.ipynb
@@ -412,7 +412,7 @@
     }
    ],
    "source": [
-    "#run this code to read data \n",
+    "#run this code to read players.csv data \n",
     "library(tidyverse)\n",
     "\n",
     "players_data <- read.csv(\"data/players.csv\") \n",
@@ -423,7 +423,11 @@
   {
    "cell_type": "markdown",
    "id": "c1503d4c-3bfd-458c-bae9-0f41decc522b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "**Data Description\n",
     "    players.csv Dataset**\n",
@@ -481,7 +485,7 @@
     "- Players hours played reflects on how often a player engages with the game, and can be analyzed the same way as players experience is, with a graph\n",
     "- Players age may reflect how interested different age groups are in the game, and can be analyzed the same way.\n",
     "\n",
-    "**How to wrangle the dataset**\n",
+    "**How to Wrangle the Dataset**\n",
     "- Select variables specific to the question being answered\n",
     "- Tidy the dataset by naming variables in similar matter (all lowercase)\n",
     "- Split the data into a training and testing dataset  "
@@ -1540,7 +1544,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "02df10c3-28ed-4507-b145-31a9f2225c97",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2062,9 +2068,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0eacb042-f4a7-48b7-b213-6c55e2512465",
+   "metadata": {},
+   "source": [
+    "**Methods and Plan**\n",
+    "\n",
+    "**KNN classification is the most appropriate method to answer this question**\n",
+    "- this is because we are predicting a true/false variable instead of a numeric one\n",
+    "- predictions on non-linear relationships can be made, which is the case for this question\n",
+    "  \n",
+    "**Limitations include choosing the right number of neighbors, scaling, and how far apart the points are**\n",
+    "\n",
+    "- the number of neighbors chosen can change how accurate the resulting prediction is\n",
+    "- not scaling the axis can give innacurate results\n",
+    "- If many points are close together, it may be hard to predict\n",
+    "  \n",
+    "**Selecting and composing a model**\n",
+    "- Tune different k values by testing a number of k values to see which is most accurate\n",
+    "- Use cross validation\n",
+    "- Use age, experience, and hours played as predictors\n",
+    "- Prediction is true/false for subscribe\n",
+    "\n",
+    "**Processing the data**\n",
+    "- Select variables relevant to the question asked\n",
+    "- After tidying the data, split data in 75/25 format (75 for training, 25 for testing)\n",
+    "- Use k fold cross validation and determine a suitable k value "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "906f1a34-26df-49f7-8e59-8bc15dd4151c",
+   "id": "3a8e433c-5a63-4fca-bc0f-52932618e1e8",
    "metadata": {},
    "outputs": [],
    "source": []
