Added github link

--- a/individual_project.ipynb
+++ b/individual_project.ipynb
@@ -2097,9 +2097,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c6c2da46-bcc9-4526-b580-6db63d9531a5",
+   "metadata": {},
+   "source": [
+    "**Github Link**\n",
+    "https://github.com/Amisha-B32/individual_project_repo.git"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a8e433c-5a63-4fca-bc0f-52932618e1e8",
+   "id": "c84c8bed-59ed-44e9-9546-e4250aaea82a",
    "metadata": {},
    "outputs": [],
    "source": []
